dwarf-parser/tests/snapshots/snapshot_tests__snapshot_extern_npm.snap
---
source: dwarf-parser/tests/snapshot_tests.rs
expression: decls
---
[
  {
    "Extern": {
      "source": "npm:express",
      "name": "listen",
      "params": [
        {
          "name": "port",
          "type_": {
            "Named": "Int"
          }
        }
      ],
      "return_type": {
        "Named": "String"
      },
      "is_pub": false,
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 51
      }
    }
  }
]
