dwarf-parser/tests/snapshots/snapshot_tests__snapshot_extern_python.snap
---
source: dwarf-parser/tests/snapshot_tests.rs
expression: decls
---
[
  {
    "Extern": {
      "source": "py:json",
      "name": "dumps",
      "params": [
        {
          "name": "obj",
          "type_": {
            "Named": "Any"
          }
        }
      ],
      "return_type": {
        "Named": "String"
      },
      "is_pub": false,
      "span": {
        "file_id": 0,
        "start": 0,
        "end": 45
      }
    }
  }
]
